fix overflow and video section

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,11 +9,12 @@ footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 20px;
         .socials {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 24px;
+            gap: 16px;
         }
     }
     
