--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ body {
   font-family: 'Lato', sans-serif;
   background-color: $background-color;
   color: $white;
+  overflow-x: hidden;
 }
 
 a {
